<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background3"
    tools:context="com.capstone490.nitesh.datadashboard.Views.LoginActivity">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:gravity="center"
                android:background="@drawable/shape"
                android:layout_marginTop="120dp"/>



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"/>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_sign_in"
                android:background="@drawable/shape_login"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/register_user"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="230dp"
                android:text="@string/register_user"
                android:background="@drawable/shape_login"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
